@@ -1,4 +1,5 @@
 0.3.0
+Tweaked set menus/toolbar items sensitive.
 Find higlighting now stays until a new find or switching tabs.
 Fixed makefile uninstall.
 Done code completion.
